--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -105,19 +105,19 @@ Alternative spatial scales of assessment and management are used by agencies out
 
 We highlight previous recommendations to develop Integrated Management Processes where management objectives (including those related to biodiversity and sustainability) and management actions are integrated across biological and socioeconomic relevant scales, sectors, and decision-making bodies[@withlerGeneticallyBasedTargets2018]. Importantly, @withlerGeneticallyBasedTargets2018 recommend management systems that adaptively respond to statuses from routine assessments at relevant scales.
  
-## GOALS, COMPONENTS, and SCOPE OF THE WORKING PAPER
+## GOALS, COMPONENTS, and SCOPE OF THE RESEARCH DOCUMENT
 
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize}
-\item The goals of this Working Paper are summarized as:
+\item The goals of this Research Document are summarized as:
 \begin{itemize}
 \item Develop candidate methods for identifying LRPs for Pacific salmon that are consistent with the WSP objective of conserving biodiversity.
 \item Document candidate methods for developing LRPs including data requirements and assumptions. 
 \item Document key uncertainties that affect LRP estimates.
 \item Provide guidance and recommendations on the application of candidate methods over a range of data types and availability.
 \end{itemize}
-\item The sections of this Working Paper are as follows:
+\item The sections of this Research Document are as follows:
 \begin{itemize}
 \item \textbf{Section 1.} Introduction: background and goals
 \item \textbf{Section 2.} A review of reference points and their roles for Pacific salmon
@@ -132,7 +132,7 @@ We highlight previous recommendations to develop Integrated Management Processes
 
 ### Goals
 
-The goals of this and the companion working paper, @holtCaseStudyApplicationsInpress<!--Holt et al. (In review)^[Holt, K., Holt, C.A., Warkentin, L., Wor, C., Davis, B., Arbeider, M., Bokvist, J., Crowley, S., Grant, S., Luedke, W., McHugh, D., Picco, C., and Van Will, P.. Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper In review]--> as outlined in the Terms of Reference, were to:
+The goals of this and the companion Research Document, @holtCaseStudyApplicationsInpress<!--Holt et al. (In review)^[Holt, K., Holt, C.A., Warkentin, L., Wor, C., Davis, B., Arbeider, M., Bokvist, J., Crowley, S., Grant, S., Luedke, W., McHugh, D., Picco, C., and Van Will, P.. Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper In review]--> as outlined in the Terms of Reference, were to:
 
 - Develop candidate methods for identifying SMU-level LRPs for Pacific salmon that are consistent with the WSP objective of conserving biodiversity by maintaining CUs above lower biological benchmarks.  These candidate methods include LRPs based on the status of component CUs and aggregate abundance over multiple CUs, where CU assessments can be developed using a multidimensional or single-metric approaches, as appropriate. (Section \@ref(est-methods))
 
@@ -142,9 +142,9 @@ The goals of this and the companion working paper, @holtCaseStudyApplicationsInp
 
 - Provide guidance and recommendations on the application of candidate methods over a range of data types and availability. (Section \@ref(guidelines))
 
-### What's in this paper?
+### What's in this Research Document?
 
-This working paper addresses these four goals, while the companion Working Paper [@holtCaseStudyApplicationsInpress]<!--(Holt et al. In review)--> provides a more detailed and technical descriptions of candidate methods for developing LRPs and more fully demonstrates their implementation on three case studies. Summaries of methods are included here for the completeness of these guidelines.
+This Research Document addresses these four goals, while the companion Research Document [@holtCaseStudyApplicationsInpress]<!--(Holt et al. In review)--> provides a more detailed and technical descriptions of candidate methods for developing LRPs and more fully demonstrates their implementation on three case studies. Summaries of methods are included here for the completeness of these guidelines.
 
 
 In particular, this paper has six sections: 
@@ -170,7 +170,7 @@ This work was supported by a technical working group composed of DFO and First N
 <!--CH: Sue suggested omitting: The LRPs considered here focus on characterizing serious harm to the stock based on levels of and/or trends in spawner abundance. We have not included metrics or benchmarks of the status of salmon habitat [@stalbergCanadaPolicyConservation2009] or the ecosystem as a whole, though future analyses could include a more thorough characterization of the nature of serious harm to salmon [as in @dfoUpdateAssessmentFramework2016].-->
 
 
-While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step. Also, our applications of LRP methods to case studies are for illustrative purposes only, and are not meant to be a formal estimation of LRPs for those SMUs. Additional LRP methods could be developed in the future, aligned with the key principles outlined here (Section \@ref(principles)).
+While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both Research Documents, and is recommended as a next step. Also, our applications of LRP methods to case studies are for illustrative purposes only, and are not meant to be a formal estimation of LRPs for those SMUs. Additional LRP methods could be developed in the future, aligned with the key principles outlined here (Section \@ref(principles)).
 
 Time-varying population processes, such as changes in productivity, have important impacts on biological benchmarks, LRPs, and assessment against LRPs. While we describe some recent approaches for considering those impacts in Section \@ref(recommendations), a comprehensive review and evaluation of the impacts of time-varying parameters on LRPs is beyond the scope of this study. This theme is an important area for future research.
 
