updated bib file

--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -807,7 +807,7 @@
   author = {Holt, K.R. and Holt, C.A. and Warkentin, L. and Wor, C. and Davis, B. and Arbeider, M. and Bokvist, J. and Crowley, S. and Grant, S. and Luedke, W. and McHugh, D. and Picco, C. and Van Will, P.},
   year = {In press},
   journal = {Canadian Science Advisory Secretariat Research Document},
-  volume = {20xx/nnnn}
+  volume = {202n/nnnn}
 }
 
 @article{holtCautionsUsingPercentilebased2015,
@@ -1446,7 +1446,7 @@
   issn = {0021-8901, 1365-2664},
   doi = {10.1111/1365-2664.13835},
   langid = {english},
-  file = {C\:\\Users\\HoltC\\Zotero\\storage\\K6R7JARU\\Price et al. - 2021 - Portfolio simplification arising from a century of.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\YKZ9I297\\Price et al. - 2021 - Portfolio simplification arising from a century of.pdf}
 }
 
 @article{puntEssentialFeaturesNextgeneration2020,
