Update references and bib file

--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -63,7 +63,7 @@
 }
 
 @techreport{hilbornBritishColumbiaChum2012,
-	title = {British {Columbia} chum salmon (\textit{{\textless}span class="nocase"{\textgreater}{Oncorhynchus} keta{\textless}/span{\textgreater}}) fisheries: {British} {Columbia} coastal and adjacent {Canadian} {Pacific} {EEZ} waters, final certification report.},
+	title = {British {Columbia} chum salmon (\textit{{Oncorhynchus} }\textit{keta}) fisheries: {British} {Columbia} coastal and adjacent {Canadian} {Pacific} {EEZ} waters, final certification report.},
 	url = {https://cert.msc.org/FileLoader/FileLinkDownload.asmx/GetFile?encryptedKey=7Vmoh6f1XiltbBchK3vet6pENUB2cMgo+ky2lejoZhIzbwoyLfHKcNk6G3H7Npiw},
 	language = {en},
 	number = {82506},
@@ -433,7 +433,7 @@
 }
 
 @article{deckerAssessmentInteriorFraser2014,
-	title = {Assessment of the {Interior} {Fraser} {Coho} {Salmon} (\textit{{\textless}span class="nocase"{\textgreater}{Oncorhynchus} kisutch{\textless}/span{\textgreater}}) {Management} {Unit} {Relative} to the 2006 {Conservation} {Strategy} {Recovery} {Objectives}},
+	title = {Assessment of the {Interior} {Fraser} {Coho} {Salmon} (\textit{{Oncorhynchus} }\textit{kisutch}) {Management} {Unit} {Relative} to the 2006 {Conservation} {Strategy} {Recovery} {Objectives}},
 	volume = {2014/086},
 	url = {https://www.dfo-mpo.gc.ca/csas-sccs/publications/resdocs-docrech/2014/2014_086-eng.html},
 	language = {en},
@@ -444,7 +444,7 @@
 }
 
 @article{dfoWildSalmonPolicy2015,
-	title = {Wild salmon policy biological status assessment for conservation units of interior {Fraser} {River} {Coho} {Salmon} (\textit{{\textless}span class="nocase"{\textgreater}{Oncorhynchus} kisutch{\textless}/span{\textgreater}})},
+	title = {Wild salmon policy biological status assessment for conservation units of interior {Fraser} {River} {Coho} {Salmon} (\textit{{Oncorhynchus} }\textit{kisutch})},
 	volume = {2015/022},
 	url = {https://www.dfo-mpo.gc.ca/csas-sccs/publications/sar-as/2015/2015_022-eng.html},
 	abstract = {The Wild Salmon Policy (WSP) outlines Fisheries and Oceans Canada’s (DFO) strategies for managing Canada’s salmon resources. The status assessment (Strategy 1) involves developing benchmarks and determining the biological status of Conservation Units (CUs).},
@@ -456,7 +456,7 @@
 }
 
 @article{liermannUsingAccessibleWatershed2010,
-	title = {Using accessible watershed size to predict management parameters for {Chinook} salmon, \textit{{\textless}span class="nocase"{\textgreater}{Oncorhynchus} tshawytscha{\textless}/span{\textgreater}}, populations with little or no spawner-recruit data: a {Bayesian} hierarchical modelling approach},
+	title = {Using accessible watershed size to predict management parameters for {Chinook} salmon, \textit{{Oncorhynchus} }\textit{tshawytscha}, populations with little or no spawner-recruit data: a {Bayesian} hierarchical modelling approach},
 	volume = {17},
 	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2400.2009.00719.x},
 	doi = {https://doi.org/10.1111/j.1365-2400.2009.00719.x},
@@ -466,12 +466,12 @@
 	author = {Liermann, M. C. and Sharma, R. and Parken, C. K.},
 	year = {2010},
 	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2400.2009.00719.x},
-	keywords = {life history, population dynamics, capacity, fish-habitat model, hierarchical model, maximum sustainable yield},
+	keywords = {capacity, fish-habitat model, hierarchical model, life history, maximum sustainable yield, population dynamics},
 	pages = {40--51},
 }
 
 @article{dfoIntegratedBiologicalStatus2016,
-	title = {Integrated {Biological} {Status} of {Southern} {British} {Columbia} {Chinook} {Salmon} (\textit{{\textless}span class="nocase"{\textgreater}{Oncorhynchus} tshawytscha{\textless}/span{\textgreater}}) {Under} the {Wild} {Salmon} {Policy}},
+	title = {Integrated {Biological} {Status} of {Southern} {British} {Columbia} {Chinook} {Salmon} (\textit{{Oncorhynchus} }\textit{tshawytscha}) {Under} the {Wild} {Salmon} {Policy}},
 	volume = {2016/042},
 	url = {https://www.dfo-mpo.gc.ca/csas-sccs/Publications/SAR-AS/2016/2016_042-eng.html?wbdisable=true},
 	language = {en},
@@ -501,7 +501,7 @@
 }
 
 @article{brown2020SummaryAbundance2020,
-	title = {2020 {Summary} of {Abundance} {Data} for {Chinook} {Salmon} (\textit{{Oncorhynchus} tshawytscha}) in {Southern} {British} {Columbia}, {Canada}},
+	title = {2020 {Summary} of {Abundance} {Data} for {Chinook} {Salmon} (\textit{{Oncorhynchus} }\textit{tshawytscha}) in {Southern} {British} {Columbia}, {Canada}},
 	volume = {3401},
 	url = {https://science-catalogue.canada.ca/record=4089004~S6},
 	language = {en},
@@ -523,7 +523,7 @@
 }
 
 @article{ifcrtConservationStrategyCoho2006,
-	title = {Conservation strategy for {Coho} {Salmon}  (\textit{{\textless}span class="nocase"{\textgreater}{Oncorhynchus} kisutch{\textless}/span{\textgreater}}), interior {Fraser} {River} populations},
+	title = {Conservation strategy for {Coho} {Salmon}  (\textit{{Oncorhynchus} }\textit{kisutch}), interior {Fraser} {River} populations},
 	url = {http://essa.com/wp-content/uploads/2015/03/InteriorFraserCohoConservationStrategy-TOC-and-ExecSumm.pdf},
 	journal = {Fisheries and Oceans Canada},
 	author = {{IFCRT}},
@@ -573,7 +573,7 @@
 }
 
 @article{dfo2017FraserSockeye2018,
-	title = {The 2017 {Fraser} {Sockeye} {Salmon} (\textit{{\textless}span class="nocase"{\textgreater}{Oncorhynchus} nerka{\textless}/span{\textgreater}}) integrated biological status re-assessment under the {Wild} {Salmon} {Policy}},
+	title = {The 2017 {Fraser} {Sockeye} {Salmon} (\textit{{Oncorhynchus} }\textit{nerka}) integrated biological status re-assessment under the {Wild} {Salmon} {Policy}},
 	volume = {2018/017},
 	url = {https://www.dfo-mpo.gc.ca/csas-sccs/Publications/SAR-AS/2018/2018_017-eng.html},
 	abstract = {This SAR reports on the first re-assessment of biological status under the Wild Salmon Policy (WSP). This work was completed for 24 Fraser Sockeye Salmon Conservation Units (CUs) in 2017, which updates the previous statuses for these CUs (DFO 2012).},
@@ -584,7 +584,7 @@
 }
 
 @article{grant2017FraserSockeye2020,
-	title = {The 2017 {Fraser} {Sockeye} {Salmon} (\textit{{\textless}span class="nocase"{\textgreater}{Oncorhynchus} nerka{\textless}/span{\textgreater}}) {Integrated} {Biological} {Status} {Re}-{Assessments} {Under} the {Wild} {Salmon} {Policy} {Using} {Standardized} {Metrics} and {Expert} {Judgment}},
+	title = {The 2017 {Fraser} {Sockeye} {Salmon} (\textit{{Oncorhynchus} }\textit{nerka}) {Integrated} {Biological} {Status} {Re}-{Assessments} {Under} the {Wild} {Salmon} {Policy} {Using} {Standardized} {Metrics} and {Expert} {Judgment}},
 	volume = {2018/017},
 	url = {https://www.dfo-mpo.gc.ca/csas-sccs/Publications/ResDocs-DocRech/2020/2020_038-eng.html?wbdisable=true},
 	language = {en},
@@ -663,7 +663,7 @@
 }
 
 @article{riddellReview2001Chinook2002,
-	title = {Review of 2001 chinook returns to the {West} {Coast} {Vancouver} {Island}, forecast of the 2002 {Return} to the {Stamp} {River} / {Robertson} {Creek} {Hatchery} indicator stock, and outlook for other {WCVI} chinook stocks},
+	title = {Review of 2001 {Chinook} returns to the {West} {Coast} {Vancouver} {Island}, forecast of the 2002 {Return} to the {Stamp} {River} / {Robertson} {Creek} {Hatchery} indicator stock, and outlook for other {WCVI} {Chinook} stocks},
 	volume = {2002/119},
 	url = {https://www.dfo-mpo.gc.ca/csas-sccs/publications/resdocs-docrech/2002/2002_119-eng.htm},
 	language = {en},
@@ -744,6 +744,7 @@ Our habitat-based model can generate biologically-based escapement goals, rooted
 	title = {Assessment of {West} {Coast} {Vancouver} {Island} {Chinook} and 2010 forecast},
 	volume = {2011/032},
 	url = {https://publications.gc.ca/site/eng/432189/publication.html},
+	journal = {DFO  Can. Sci. Advis. Sec. Sci. Advis. Rep.},
 	author = {DFO},
 	year = {2012},
 }
@@ -778,7 +779,7 @@ Our habitat-based model can generate biologically-based escapement goals, rooted
 }
 
 @article{forrestAssessmentPacificCod2020,
-	title = {Assessment of {Pacific} {Cod} (\textit{{\textless}span class="nocase"{\textgreater}{Gadus} macrocephalus{\textless}/span{\textgreater}}) for {Hecate} {Strait} and {Queen} {Charlotte} {Sound} ({Area} {5ABCD}), and {West} {Coast} {Vancouver} {Island} ({Area} {3CD}) in 2018},
+	title = {Assessment of {Pacific} {Cod} (\textit{{Gadus} }\textit{macrocephalus}) for {Hecate} {Strait} and {Queen} {Charlotte} {Sound} ({Area} {5ABCD}), and {West} {Coast} {Vancouver} {Island} ({Area} {3CD}) in 2018},
 	volume = {2020/070},
 	url = {https://publications.gc.ca/site/eng/9.896070/publication.html},
 	language = {en},
@@ -790,7 +791,7 @@ Our habitat-based model can generate biologically-based escapement goals, rooted
 }
 
 @article{coxCandidateLimitReference2019,
-	title = {Candidate {Limit} {Reference} {Points} as a {Basis} for {Choosing} {Among} {Alternative} {Harvest} {Control} {Rules} for {Pacific} {Herring} (\textit{{\textless}span class="nocase"{\textgreater}{Clupea} pallasii{\textless}/span{\textgreater}}) in {British} {Columbia}},
+	title = {Candidate {Limit} {Reference} {Points} as a {Basis} for {Choosing} {Among} {Alternative} {Harvest} {Control} {Rules} for {Pacific} {Herring} (\textit{{Clupea} }\textit{pallasii}) in {British} {Columbia}},
 	volume = {2019/050},
 	url = {https://publications.gc.ca/site/eng/9.883265/publication.html},
 	language = {en},
@@ -889,6 +890,7 @@ Our habitat-based model can generate biologically-based escapement goals, rooted
 	doi = {http://dx.doi.org/10.1139/cjfas-2019-0432},
 	abstract = {Information on biological status is essential for designing, implementing, and evaluating management strategies and recovery plans for threatened or exploited species. However, the data required to quantify status are often limited, and it is important to understand how assessments of status may be biased by assumptions in data analysis. For Paciﬁc salmon, biological status assessments based on spawner abundances and spawner–recruitment (SR) analyses often involve “run reconstructions” that impute missing spawner data, expand observed spawner abundance to account for unmonitored streams, assign catch to individual stocks, and quantify age-at-return. Using a stochastic simulation approach, we quantiﬁed how common assumptions in run reconstructions biased assessments of biological status based on spawner abundance. We found that status assessments were robust to most common assumptions in run reconstructions, even in the face of declining monitoring coverage, but that overestimating catch tended to increase rates of status misclassiﬁcation. Our results lend conﬁdence to biological status assessments based on spawner abundances and SR analyses, even in the face of incomplete data.},
 	language = {en},
+	journal = {Can. J. Fish. Aquat. Sci.},
 	author = {Peacock, Stephanie J and Hertz, Eric and Holt, Carrie A and Connors, Brendan and Freshwater, Cameron and Connors, Katrina},
 	year = {2020},
 	pages = {1904--1920},
@@ -909,7 +911,7 @@ Our habitat-based model can generate biologically-based escapement goals, rooted
 
 @techreport{cosewicCOSEWICAssessmentStatus2020,
 	address = {Ottawa. xxxv + 203 pp},
-	title = {{COSEWIC} assessment and status report on the {Chinook} {Salmon} \textit{{\textless}span class="nocase"{\textgreater}{Oncorhynchus} tshawytscha{\textless}/span{\textgreater}}, {Designatable} {Units} in {Southern} {British} {Columbia}  ({Part} {Two} – {Designatable} {Units} with {High} {Levels} of {Artificial} {Releases} in the {Last} 12 {Years}), in {Canada}},
+	title = {{COSEWIC} assessment and status report on the {Chinook} {Salmon} \textit{{Oncorhynchus} }\textit{tshawytscha}, {Designatable} {Units} in {Southern} {British} {Columbia}  ({Part} {Two} – {Designatable} {Units} with {High} {Levels} of {Artificial} {Releases} in the {Last} 12 {Years}), in {Canada}},
 	url = {https://epe.lac-bac.gc.ca/100/201/301/weekly_acquisitions_list-ef/2021/21-43/publications.gc.ca/collections/collection_2021/eccc/CW69-14-469-2021-eng.pdf},
 	language = {en},
 	urldate = {2021-12-10},
@@ -1016,7 +1018,7 @@ Section: Report},
 @misc{standevelopmentteamRStanInterfaceStan2020,
 	title = {{RStan}: the {R} interface to {Stan}},
 	url = {http://mc-stan.org/},
-	author = {Stan Development Team},
+	author = {{Stan Development Team}},
 	year = {2020},
 }
 
@@ -1104,7 +1106,7 @@ Section: Report},
 }
 
 @article{lynchAssessmentEnhancedChum2020,
-	title = {Assessment of {Enhanced} {Chum} {Salmon} (\textit{{\textless}span class="nocase"{\textgreater}{Oncorhynchus} keta{\textless}/span{\textgreater}}) in {Canada}: 1980 to 2018 {Return} {Years}},
+	title = {Assessment of {Enhanced} {Chum} {Salmon} (\textit{{Oncorhynchus} }\textit{keta}) in {Canada}: 1980 to 2018 {Return} {Years}},
 	volume = {1319},
 	url = {https://publications.gc.ca/site/eng/9.893287/publication.html},
 	journal = {Can. Data Rep. Fish. Aquat. Sci.},
