--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -86,24 +86,25 @@ CH: you're right about IFR coho, but they do 'tend' to in my experience. -->
 Salmon have a complex hierarchical populations structure that extends from taxonomic species to local demes or spawning locations (Fig. \@ref(fig:DiversitySchematic)). CUs are nested within taxonomic species and major life-history variants, such as ocean- and stream-type for Chinook Salmon, *Oncorhynchus tshawytscha*, and populations are nested within CUs [@dfoCanadaPolicyConservation2005].
 While assessments of Pacific salmon under the WSP has focused on setting benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005], the revised *Fisheries Act* indicates that a single LRP is required for each major fish stock[@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, major fish stocks are defined as Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status [@dfoPreliminary2021Salmon2021].  The delineation of SMUs was in part a response to the national-level requirement for delineating major stocks for Pacific salmon under the *Fisheries Act*. This provision created the need for the development of methodologies to estimate LRPs for the assessment and management of fisheries at the SMU level, while considering the need to maintain all CUs within an SMU in Amber or Green zones, i.e., above Red status. 
 
+In addition to intrinsic biological reasons for assessing status at the CU scale, this scale is also relevant to various uses and management activities for Pacific salmon, e.g., local or terminal fisheries; food, social and ceremonial fisheries; hatchery enhancement; and watershed restoration and planning (Fig. \@ref(fig:DiversitySchematic)). While the Fish Stocks provisions pertain to fisheries at scales relevant to marine harvest management, for many SMUs those fisheries have been restricted in recent decades [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. Food, social and ceremonial use of salmon by First Nations occur at a variety of scales, often within CUs at the level of populations or specific spawning locations. In addition, threats and management responses extend to larger regional or aggregate-SMU scales, and across species, e.g., impacts related to climate change. Therefore, stock assessment and management are required at a hierarchy of spatial scales from within CUs to regional scales, across species.  
 
-```{r DiversitySchematic, fig.cap="Schematic representation of hierarchical, nested population structure of Pacific salmon (left) with the spatial scales of a selection of uses and management activities alighed with those scales, including the scale of Stock Management Units, SMUs (right)", out.width = '100%', warning=FALSE, echo=FALSE, fig.align="center"}
+Given the existing framework for assessing status of Pacific salmon by CU [@holtIndicatorsStatusBenchmarks2009] and the similar intent between LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, status against lower benchmarks can be used as a proxy for status against LRPs but applied at the scale of CUs instead of SMUs. The present work expands on assessment methods developed under the WSP by integrating statuses across CUs within an SMU and providing guidance on establishing LRPs at the scale of Pacific salmon SMUs. While CUs are nested within SMUs, the number of CUs within each SMU varies among salmon species. For example, SMUs for Sockeye Salmon, *Oncorhynchus nerka*, tend to contain a larger number of CUs than those for other salmon species because of the relatively high levels of local adaptation and biodiversity among spawning populations, and the associated small spatial scale of Sockeye CUs compared with other species. 
+
+
+
+```{r DiversitySchematic, fig.cap="Schematic representation of hierarchical, nested population structure of Pacific salmon (left) with the spatial scales of selected uses and management activities aligned with those scales, including the scale of Stock Management Unit, SMU (right)", out.width = '100%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/DiversitySchematic.png")
 ```
-
 
 <!--CH: the following 2 lines give a line break before the next pgh after figure-->
 \
 &nbsp;
-In addition to intrinsic biological reasons for assessing status at the CU scale, this scale is also relevant for various uses and management activities for Pacific salmon, e.g., local or terminal fisheries; food, social and ceremonial fisheries; hatchery enhancement; and watershed restoration and planning (Fig. \@ref(fig:DiversitySchematic)). While the Fish Stocks provisions pertain to fisheries at scales relevant to marine harvest management, for many SMUs those fisheries have been restricted in recent decades [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. In particular, food, social and ceremonial use of salmon by First Nations occur at a variety of scales, often within CUs at the level of populations or specific spawning locations. Threats and management responses also extend to larger regionalor aggregate-SMU scales, and across species, e.g., impacts related to climate change. Therefore, stock assessment and management are required at a hierarchy of spatial scales from within CUs to regional scales, across species.  
-
-Given the existing framework for assessing status of Pacific salmon by CU [@holtIndicatorsStatusBenchmarks2009] and the similar intent between LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, status against lower benchmarks can be used as a proxy for status against LRPs but applied at the scale of CUs instead of SMUs. The present work expands on assessment methods developed under the WSP by integrating statuses across CUs within an SMU and providing guidance on establishing LRPs at the scale of Pacific salmon SMUs. While CUs are nested within SMUs, the number of CUs within each SMU varies among salmon species. For example, SMUs for Sockeye Salmon, *Oncorhynchus nerka*, tend to contain a larger number of CUs than those for other salmon species, e.g., Chinook, because of the relatively high levels of local adaptation and biodiversity among spawning populations, and the associated small spatial scale of Sockeye CUs compared with other species. 
 
 The existing framework for CU assessments includes consideration of the fine-scale distribution of spawners within CUs, e.g., at the stream level [@dfoIntegratedBiologicalStatus2016]. Here we also consider the distribution of populations within CUs in the assessment when it is considered to be important for the sustainability of the CU or SMU. Identifying relevant spatial scales within CUs when assessing status can be challenging due to uncertainty and temporal variability in meta-population dynamics and the impacts of those dynamics on long-term viability, which represents a key source of uncertainty when defining LRPs.
 
 Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC which largely align with DFO's CUs, and Stock Groups under the Pacific Salmon Treaty, which align to some extent with SMUs. These units are not considered further here. Although the LRPs presented are intended to be applied at the SMU scale, these methods could also be applied at smaller or larger scales to inform a variety of management decisions.
 
-We highlight previous recommendations to develop Integrated Management Processes where management objectives (including those related to biodiversity and sustainability) and management actions are integrated across biological and socioeconomic relevant scales, sectors, and decision-making bodies[@withlerGeneticallyBasedTargets2018]. Importantly, @withlerGeneticallyBasedTargets2018 recommend management systems that adaptively respond to statuses from routine assessments at relevant scales.
+We highlight previous recommendations to develop Integrated Management Processes where management objectives (including those related to biodiversity and sustainability) and management actions are integrated across biological and socioeconomic relevant scales, sectors, and decision-making bodies [@withlerGeneticallyBasedTargets2018]. Importantly, @withlerGeneticallyBasedTargets2018 recommend management systems that adaptively respond to statuses from routine assessments at relevant spatial scales.
  
 ## GOALS, COMPONENTS, and SCOPE OF THE RESEARCH DOCUMENT
 
